--- a/css/swag.css
+++ b/css/swag.css
@@ -100,19 +100,39 @@ h3 {
   }
 }
 h1 {
-  margin-top: 92px;
+  margin-top: 32px;
+}
+@media only screen and (min-width: 481px) {
+  h1 {
+    margin-top: 92px;
+  }
 }
 
 h1 {
-  font-size: 4.25rem;
+  font-size: 3rem;
+}
+@media only screen and (min-width: 481px) {
+  h1 {
+    font-size: 4.25rem;
+  }
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2rem;
+}
+@media only screen and (min-width: 481px) {
+  h2 {
+    font-size: 3rem;
+  }
 }
 
 h3 {
-  font-size: 2.25rem;
+  font-size: 1.5rem;
+}
+@media only screen and (min-width: 481px) {
+  h3 {
+    font-size: 2.25rem;
+  }
 }
 
 p {
@@ -123,7 +143,12 @@ p {
   margin-top: 72px;
   margin-bottom: 72px;
   text-shadow: 0 0 white;
-  font-size: 4.5rem;
+  font-size: 3rem;
+}
+@media only screen and (min-width: 481px) {
+  .notes {
+    font-size: 4.5rem;
+  }
 }
 
 a,
