--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -17,10 +17,30 @@ h3 {
   0% { left: 0; }
   100% { left: -100%; }
 }
-h1 { margin-top: 92px; }
-h1 { font-size: rem(68); }
-h2 { font-size: rem(48); }
-h3 { font-size: rem(36); }
+h1 {
+  margin-top: 32px;
+  @media only screen and (min-width: 481px) {
+    margin-top: 92px;
+  }
+}
+h1 {
+  font-size: rem(48);
+  @media only screen and (min-width: 481px) {
+    font-size: rem(68);
+  }
+}
+h2 {
+  font-size: rem(32);
+  @media only screen and (min-width: 481px) {
+    font-size: rem(48);
+  }
+}
+h3 {
+  font-size: rem(24);
+  @media only screen and (min-width: 481px) {
+    font-size: rem(36);
+  }
+}
 
 p {
   font-size: rem(18);
@@ -29,7 +49,10 @@ p {
   margin-top: 72px;
   margin-bottom: 72px;
   text-shadow: 0 0 rgba(255,255,255,1);
-  font-size: rem(72);
+  font-size: rem(48);
+  @media only screen and (min-width: 481px) {
+    font-size: rem(72);
+  }
 }
 a,
 a:link,
